--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -178,4 +178,4 @@ The benefit of having it in an R package is that you can instantaneously have a 
 
 ## xpathTextR function
 
-This function has been provided to return elements from a website, other than html tables, as these functions predominantely work with tables
+This function has been provided to return elements from a website, other than html tables, as these functions predominately work with tables. The below example shows how this can be implemented, but requires the retrival of the xpath via the Inspect command in Google Chrome
