--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -225,6 +225,28 @@ print(clean_text)
 
 I have used the trim white space function to extract the result element from the returned list from the previous function and now I use piping to a gsub function to remove newlines and spaces, I use the trimws() command again to make sure the spacing is sorted and then I convert (cast) this into a character string. Finally, the results are printed. 
 
+## Getting data from OpenSafely
+
+A contribution has been added to the package to allow for the OpenSafely data to be examined. To get the [OpenSafely data](https://codelists.opensafely.org/) you can specify the code list required and this will pull it into a list. To do this follow the below example:
+
+```{r opensafely}
+
+os_list <- NHSDataDictionaRy::openSafely_listR("opensafely/ace-inhibitor-medications")
+glimpse(os_list)
+
+```
+To limit the list to a specific timed list - you can add the next level down to bring back a specific list:
+```{r opensafely_two}
+
+os_limit_list <- openSafely_listR("opensafely/ace-inhibitor-medications", "2020-05-19")
+glimpse(os_limit_list)
+
+```
+
+This extends the functionality of the tableR wrapper to pull back the HTML tables, and has been added as its specific function for convenience in working with the OpenSafely site. 
+
+To understand the OpenSafely site, please see [Documentation](https://codelists.opensafely.org/docs/).
+
 # Wrapping up
 
 There are lots of use cases for this, but I would like to keep iterating this tool so please contact me with suggestions of what could be included in future versions. 
