--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -29,7 +29,7 @@ Additionally, the package has been developed with generic web scraping functiona
 
 To load the package, you can use the below command:
 
-```{r setup}
+```{r setup, message=FALSE, echo=TRUE}
 library(NHSDataDictionaRy)
 library(dplyr)
 library(magrittr)
@@ -144,8 +144,12 @@ The scrapeR function is the workhorse, but the tableR wraps the results of the f
 
 ```{r tableR_example}
 # Filter by a specific lookup required
-reduced_tibble <-
-dplyr::filter(nhs_tibble, link_name == "ACTIVITY TREATMENT FUNCTION CODE")
+if(is.null(nhs_tibble)){
+  print("The NHS tibble has not loaded, this could be due to internet connection issues.")
+} else{
+  reduced_tibble <-
+  dplyr::filter(nhs_tibble, link_name == "ACTIVITY TREATMENT FUNCTION CODE")
+}
 
 #Use the tableR function to query the NHS Data Dictionary website and return the associate tibble
 
@@ -179,8 +183,14 @@ act_aggregations <- tibble(SpecCode = as.character(c(101,102,103, 104, 105)),
 
 # Use dplyr to join the NHS activity by specialty code
 
-act_aggregations %>% 
+if(is.null(national_codes)){
+  print("The NHS tibble has not loaded, this could be due to internet connection issues.")
+} else{
+  act_aggregations %>% 
   left_join(national_codes, by = c("SpecCode"="Code"))
+}
+
+
   
 # This easily joins the lookup on to your data
   
@@ -230,16 +240,14 @@ I have used the trim white space function to extract the result element from the
 A contribution has been added to the package to allow for the OpenSafely data to be examined. To get the [OpenSafely data](https://codelists.opensafely.org/) you can specify the code list required and this will pull it into a list. To do this follow the below example:
 
 ```{r opensafely}
+# Check if the connection has returned any values
+if(is.null(result_list)){
+  print("There is an issue with the internet. This function cannot be used until the internet is available.")
+} else{
+  os_list <- NHSDataDictionaRy::openSafely_listR("opensafely/ace-inhibitor-medications")
+  glimpse(os_list)
+}
 
-os_list <- NHSDataDictionaRy::openSafely_listR("opensafely/ace-inhibitor-medications")
-glimpse(os_list)
-
-```
-To limit the list to a specific timed list - you can add the next level down to bring back a specific list:
-```{r opensafely_two}
-
-os_limit_list <- openSafely_listR("opensafely/ace-inhibitor-medications", "2020-05-19")
-glimpse(os_limit_list)
 
 ```
 
